fixing video overflow x and project images height on smaller screens

--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -52,6 +52,7 @@
     height: 100%;
     z-index: 0;
     opacity: 0.95;
+    overflow: hidden;
   }
 
   video {
@@ -75,16 +76,16 @@
   .typing-effect {
     // font-family: "Courier New", Courier, monospace;
     // font-size: 24px;
-    // white-space: nowrap; 
-    // overflow: hidden; 
+    // white-space: nowrap;
+    // overflow: hidden;
     // border-right: 2px solid;
     font-size: 3.6rem;
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
     color: white;
-    animation: blink 0.7s step-end infinite; 
-  
+    animation: blink 0.7s step-end infinite;
+
     @include respond(tab-land) {
       font-size: 3rem;
     }
@@ -99,11 +100,10 @@
     @include respond(phone-xs) {
       font-size: 1.8rem;
     }
-   
   }
   @keyframes blink {
     50% {
-      border-color: transparent; 
+      border-color: transparent;
     }
   }
   .hero-cta {
