--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -79,6 +79,10 @@
           box-shadow: none;
           margin-bottom: 3.2rem;
         }
+
+        @media (max-width: 1400px) {
+          height: auto;
+        }
       }
     }
   }
