--- a/src/styles.css
+++ b/src/styles.css
@@ -11249,6 +11249,7 @@ section {
   height: 100%;
   z-index: 0;
   opacity: 0.95;
+  overflow: hidden;
 }
 #hero video {
   min-width: 100%;
@@ -11399,6 +11400,11 @@ section {
     border: 1px solid #d2d2d2;
     box-shadow: none;
     margin-bottom: 3.2rem;
+  }
+}
+@media (max-width: 1400px) {
+  #projects .project-wrapper__image .thumbnail {
+    height: auto;
   }
 }
 #projects .gray {
